# agentic-rag-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
agents/: __init__.py  orchestrator.py  rag_agent.py  reasoning_agent.py  router_agent.py
api/: __init__.py  main.py
api/routes/: health.py  query.py
api/schemas/: __init__.py  (+1 more)
cache/: __init__.py  response_cache.py
cli/: main.py
config/: __init__.py  constants.py  settings.py
core/: __init__.py  base_agent.py  base_retriever.py  base_tool.py  exceptions.py  logger.py
database/: __init__.py  models.py  sqlite_db.py
evaluation/: __init__.py  evaluator.py  llm_judge.py  metrics.py
execution/: __init__.py  retry_handler.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
graph/: __init__.py  nodes.py  state.py  workflow.py
guardrails/: __init__.py  input_guard.py  output_guard.py
memory/: __init__.py  long_term.py  memory_manager.py  short_term.py
notebooks/: 01.Agentic_AI.ipynb
observability/: __init__.py  metrics_collector.py  tracer.py
prompts/: __init__.py  evaluation_prompts.py  rag_prompts.py  reasoning_prompts.py  router_prompts.py
rag/: __init__.py  compressor.py  pipeline.py  reranker.py  retriever.py
scripts/: ingest_documents.py  run_full_pipeline.py
tests/: test_agents.py  test_evaluation.py  test_memory.py  test_rag.py  test_tools.py
tools/: __init__.py  database_tool.py  python_executor.py  web_search.py
vectorstore/: __init__.py  embeddings.py  faiss_store.py
(+24 files in other folders)
